--- a/app/src/main/res/layout/layout_frag_myaddress.xml
+++ b/app/src/main/res/layout/layout_frag_myaddress.xml
@@ -55,7 +55,7 @@
         android:textStyle="bold" />
     <TextView
         android:id="@+id/txt_line"
-        android:background="#FF5252"
+        android:background="@color/teryaki"
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_width="wrap_content"
@@ -123,7 +123,6 @@
         </LinearLayout>
         <LinearLayout
             android:visibility="visible"
-
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <androidx.constraintlayout.widget.ConstraintLayout
