--- a/app/src/main/res/layout-xlarge/layout_frag_sabadkharid.xml
+++ b/app/src/main/res/layout-xlarge/layout_frag_sabadkharid.xml
@@ -68,7 +68,7 @@
                 />
             <TextView
                 android:id="@+id/txt_line"
-                android:background="#DC1C53"
+                android:background="@color/teryaki"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
