--- a/app/src/main/res/layout/layout_frag_change_pass.xml
+++ b/app/src/main/res/layout/layout_frag_change_pass.xml
@@ -212,7 +212,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:background="#DC1C53"
+                android:background="@color/teryaki"
                 android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/guideline35"
                 app:layout_constraintEnd_toEndOf="@+id/txt_sabt"
